# fdroid-repo-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  docker-deploy.yml  docker-image.yml  tag.yml  test.yml
backend/: Cargo.toml  rustfmt.toml
backend/src/: main.rs
backend/src/routes/: config.rs
backend/src/utils/: app_config.rs  error.rs  mod.rs
debug/: Dockerfile  docker-compose.yml
developement/: .gitignore  Dockerfile  docker-compose.yml
development/: .gitignore
fdroid/: Cargo.toml  README.md
fdroid/src/: aapt.rs  error.rs  lib.rs  utils.rs
fdroid/src/repository/: app.rs  app_metadata.rs  config.rs  metadata.rs  mod.rs  paths.rs  tests.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  constants.ts  main.ts
frontend/src/assets/: bootstrap.scss  styles.scss
frontend/src/components/: AppOverview.vue  HeaderComponent.vue
frontend/src/router/: index.ts
frontend/src/scripts/: axios.ts
frontend/src/stores/: app.ts  auth.ts
frontend/src/views/: HomeView.vue  LoginView.vue  NotFoundView.vue
service/: Cargo.toml  README.md
service/src/: main.rs
service/src/routes/: app.rs  config.rs
service/src/utils/: error.rs  mod.rs
src/: main.rs
src/guards/: auth_guard.rs
src/repository/: app.rs  app_metadata.rs  config.rs  mod.rs  tests.rs
src/routes/: app.rs  config.rs  mod.rs
src/utils/: aapt.rs  app_config.rs  config_editor.rs  error.rs  general.rs  mod.rs
