[package]
name = "fdroid-repo-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
