[package]
name = "fdroid-repo-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.9.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.97"
serde_yaml = "0.9.21"
pretty_assertions = "1"
uuid = { version = "1.4.1", features = ["v4"] }
tempfile = "3.7.0"