[package]
name = "fdroid-repo-manager"
version = "0.1.1"
edition = "2021"
authors = ["Dominik Schwaiger <mail@dominik-schwaiger.ch>"]
publish = false

[dependencies]
fdroid = {path = "fdroid"}
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"

[workspace]
members = ["fdroid"]