[package]
name = "fdroid"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Schwaiger <mail@dominik-schwaiger.ch>"]
description = "Create and Manipulate an fdroid repository"
license = "MIT"
keywords = ["fdroid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
actix-web = {version = "4.3.1", optional = true}

[dev-dependencies]
pretty_assertions = "1"

[features]
actix = ["dep:actix-web"]
