[package]
name = "fdroid"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Schwaiger <mail@dominik-schwaiger.ch>"]
description = "Create and Manipulate an fdroid repository"
license = "MIT"
keywords = ["fdroid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
log = "0.4.19"
regex = "1.9.1"
uuid = { version = "1.4.1", features = ["v4"] }
serde_json = "1.0.97"
itertools = "0.11.0"

[dev-dependencies]
pretty_assertions = "1"
