[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdroid = {path = "../fdroid", features = ["actix"]}
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
